public class Pixel{
  private boolean estado;
  private String color;

public boolean getEstado() {
    return estado;
}
public void setEstado(boolean estado) {
    this.estado = estado;
}
public String getColor() {
    return color;
}
public void setColor(String color) {
    this.color = color;
}


}
